Improve Swagger authentication documentation
